<resources>
    <string name="app_name">GiveTake</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">GiveTake</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="phone_register">Nomor Telephone</string>
    <string name="name">Nama</string>
    <string name="register">Daftar</string>
    <string name="title_rewards">Hadiah</string>
    <string name="title_items">Barang</string>
    <string name="title_chat">Obrolan</string>
    <string name="title_profile">Profil</string>
    <string name="search_hint">Cari..</string>
    <string name="alamat">Alamat</string>
    <string name="username">Username</string>
    <string name="login">Masuk</string>
    <string name="lupa_password">Lupa Kata Sandi</string>
    <string name="to_register">Belum Memiliki Akun ? <b>Daftar</b></string>
    <string name="resend_otp">Tidak Menerima Kode ? <b>Kirim Ulang</b></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api_key">AIzaSyDGCmFl0KYADNZ635n5YrvtWL4fV5zMmDU</string>
    <string name="add_item">Tambah Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="category">Kategori</string>
    <string name="desc">Deskripsi</string>
    <string name="request">Ajukan</string>
    <string name="text_receiver">Pilih\n Penerima</string>
    <string name="text_delete_n">Hapus</string>
    <string name="receive">Terima</string>
    <string name="max_radius">Jarak Penerima (Km)</string>
    <string name="save">Simpan</string>
    <string name="profile_non_login">Silahkan Login atau Register untuk melihat halaman ini</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="point_saya">Point Saya</string>
    <string name="saran_dan_keluhan">Saran dan Keluhan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="foto">Foto</string>
    <string name="my_point">Point Saya</string>
    <string name="dummy_point">300 pts</string>
    <string name="dummy_phone">0812345678910</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="edit">Ubah</string>
    <string name="logout">Keluar</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="update">Perbarui</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ubah_barang">Ubah Barang</string>
    <string name="reset_phone">Reset Nomor Telephone</string>
    <string name="otp_text">%s merupakan kode OTP untuk aplikasi GiveTake</string>

    <string-array name="kategori">
        <item>Organik</item>
        <item>Daur Ulang</item>
        <item>Eletronik</item>
    </string-array>

    <string-array name="type">
        <item>Saran</item>
        <item>Keluhan</item>
    </string-array>
    <string name="title_activity_map_direction">MapDirectionActivity</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec diam lorem, ullamcorper at tempor sed, tincidunt at nunc. Suspendisse porttitor, enim fermentum ultricies dictum, ante magna blandit orci, a dapibus massa urna a velit. Aenean leo dui, tincidunt ac metus a, varius pretium massa. Curabitur pellentesque ligula erat, sit amet facilisis nisl ornare et. Mauris interdum a orci nec hendrerit.</string>
</resources>