<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_reward"
        android:title="@string/title_rewards" />

    <item
        android:id="@+id/navigation_items"
        android:icon="@drawable/ic_item"
        android:title="@string/title_items" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>