<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vincent.givetake.ui.fragment.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_items"
        android:name="com.vincent.givetake.ui.fragment.items.ItemsFragment"
        android:label="Items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.vincent.givetake.ui.fragment.rewards.RewardsFragment"
        android:label="@string/title_items"
        tools:layout="@layout/fragment_rewards" />
    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.vincent.givetake.ui.fragment.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/chat_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.vincent.givetake.ui.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>