<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutProfileLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_profile_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/play_regular"
                android:text="@string/title_profile"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/img_profile_login_cardview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_login" >

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_profile"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_profile_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/mont_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/img_profile_login_cardview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_name_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/mont_bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/txt_profile_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_profile_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_point"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/mont_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/txt_name_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_point_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_point"
                android:fontFamily="@font/mont_bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="end"
                app:layout_constraintTop_toBottomOf="@id/txt_profile_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_profile_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_register"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/mont_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/txt_point_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_phone_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_phone"
                android:fontFamily="@font/mont_bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="end"
                app:layout_constraintTop_toBottomOf="@id/txt_profile_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_profile_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/mont_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/txt_phone_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <TextView
                android:id="@+id/txt_email_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/mont_bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="end"
                app:layout_constraintTop_toBottomOf="@id/txt_profile_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />


            <TextView
                android:id="@+id/txt_complaint_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saran_dan_keluhan"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/mont_regular"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/txt_email_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

            <LinearLayout
                android:id="@+id/view_owner_button_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="48dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_complaint_profile">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/mont_regular"
                    android:letterSpacing="0"
                    android:paddingHorizontal="48dp"
                    android:paddingVertical="12dp"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/mont_regular"
                    android:gravity="center"
                    android:letterSpacing="0"
                    android:paddingHorizontal="48dp"
                    android:paddingVertical="12dp"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/pg_bg_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#CCFFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/pg_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>