<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_title_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:text="@string/title"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_username_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mont_regular"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_login" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username_login"
            android:fontFamily="@font/mont_regular"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edt_border"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_username_login" />

        <TextView
            android:id="@+id/txt_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mont_regular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_username_login" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password_login"
            android:fontFamily="@font/mont_regular"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edt_border"
            android:hint="@string/password"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password_login" />

        <TextView
            android:id="@+id/txt_forget_pass_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textColor="@color/black"
            android:fontFamily="@font/mont_regular"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_password_login"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/mont_regular"
            android:letterSpacing="0"
            android:paddingHorizontal="22dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_login"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/txt_error_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp"/>

        <TextView
            android:id="@+id/txt_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_register"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mont_regular"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/pg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>